deploy: 5c02fb17e6c855a24691609e136628fb98a8121b

--- a/linux/autostart/index.html
+++ b/linux/autostart/index.html
@@ -5,11 +5,13 @@
 <label><span class=flex><a href=/blender/ class=gdoc-nav__entry>Blender</a></span></label><ul class=gdoc-nav__list><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/blender/addons/ class=gdoc-nav__entry>Addons</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/blender/remove-fireflies/ class=gdoc-nav__entry>Как избавиться от светлячков</a></span></label></li><li><input type=checkbox class=hidden>
+<label><span class=flex><a href=/blender/install-renderman-linux/ class=gdoc-nav__entry>Как установить Renderman в Ubuntu</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/blender/keys/ class=gdoc-nav__entry>Полезные команды и клавиатурные сокращения Blender</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/blender/links/ class=gdoc-nav__entry>Полезные ссылки</a></span></label></li></ul></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/linux/ class=gdoc-nav__entry>Linux</a></span></label><ul class=gdoc-nav__list><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/linux/autostart/ class="gdoc-nav__entry is-active">Автозагрузка</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/linux/hibernate/ class=gdoc-nav__entry>Настройка hibernate на linux без использования swap раздела</a></span></label></li><li><input type=checkbox class=hidden>
+<label><span class=flex><a href=/linux/swap/ class=gdoc-nav__entry>Настройка swap</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/linux/kde/ class=gdoc-nav__entry>Оптимизация KDE5</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/linux/useful-information/ class=gdoc-nav__entry>Полезная информация по разным командам Linux</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/linux/settings-after-installing/ class=gdoc-nav__entry>Полезные установки</a></span></label></li><li><input type=checkbox class=hidden>
@@ -31,6 +33,7 @@
 <label><span class=flex><a href=/programming/java/useful-libs/ class=gdoc-nav__entry>Полезные библиотеки</a></span></label></li></ul></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/programming/kotlin/ class=gdoc-nav__entry>Kotlin</a></span></label><ul class=gdoc-nav__list><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/programming/kotlin/useful-libs/ class=gdoc-nav__entry>Полезные библиотеки</a></span></label></li></ul></li><li><input type=checkbox class=hidden>
+<label><span class=flex><a href=/programming/python/ class=gdoc-nav__entry>Python</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/programming/useful-git/ class=gdoc-nav__entry>Полезная информация по git</a></span></label></li></ul></li></ul></section><section class=gdoc-nav--more><h2></h2><ul class=gdoc-nav__list><li><input type=checkbox class=hidden>
 <label><span class=flex><svg class="gdoc-icon gdoc_tag"><use xlink:href="#gdoc_tag"/></svg><a href=/tags class=gdoc-nav__entry>Tags</a></span></label></li></ul></section></nav></aside><div class=gdoc-page><div class="gdoc-page__header flex flex-wrap
 justify-between
