--- a/linux/kde/index.html
+++ b/linux/kde/index.html
@@ -21,7 +21,9 @@
 <label><span class=flex><a href=/linux/kde/ class="gdoc-nav__entry is-active">Оптимизация KDE5</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/linux/useful-information/ class=gdoc-nav__entry>Полезная информация по разным командам Linux</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/linux/settings-after-installing/ class=gdoc-nav__entry>Полезные установки</a></span></label></li><li><input type=checkbox class=hidden>
-<label><span class=flex><a href=/linux/install-firefox-from-rep/ class=gdoc-nav__entry>Установка Firefox из репозитория</a></span></label></li></ul></li><li><input type=checkbox class=hidden>
+<label><span class=flex><a href=/linux/commands/ class=gdoc-nav__entry>Список команд POSIX и их описание</a></span></label></li><li><input type=checkbox class=hidden>
+<label><span class=flex><a href=/linux/install-firefox-from-rep/ class=gdoc-nav__entry>Установка Firefox из репозитория</a></span></label></li><li><input type=checkbox class=hidden>
+<label><span class=flex><a href=/linux/install-nvidia/ class=gdoc-nav__entry>Установка проприетарных драйверов NVidia</a></span></label></li></ul></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/administration/ class=gdoc-nav__entry>Администрирование</a></span></label><ul class=gdoc-nav__list><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/administration/curl/ class=gdoc-nav__entry>Curl</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/administration/mikrotik/ class=gdoc-nav__entry>Mikrotik</a></span></label></li><li><input type=checkbox class=hidden>
@@ -40,6 +42,7 @@
 <label><span class=flex><a href=/programming/kotlin/ class=gdoc-nav__entry>Kotlin</a></span></label><ul class=gdoc-nav__list><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/programming/kotlin/useful-libs/ class=gdoc-nav__entry>Полезные библиотеки</a></span></label></li></ul></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/programming/python/ class=gdoc-nav__entry>Python</a></span></label></li><li><input type=checkbox class=hidden>
+<label><span class=flex><a href=/programming/sql/ class=gdoc-nav__entry>SQL</a></span></label></li><li><input type=checkbox class=hidden>
 <label><span class=flex><a href=/programming/useful-git/ class=gdoc-nav__entry>Полезная информация по git</a></span></label></li></ul></li></ul></section><section class=gdoc-nav--more><h2></h2><ul class=gdoc-nav__list><li><input type=checkbox class=hidden>
 <label><span class=flex><svg class="gdoc-icon gdoc_tag"><use xlink:href="#gdoc_tag"/></svg><a href=/tags class=gdoc-nav__entry>Tags</a></span></label></li></ul></section></nav></aside><div class=gdoc-page><div class="gdoc-page__header flex flex-wrap
 justify-between
